--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         </activity>
         <activity android:name=".tetris.TetrisActivity" android:label="@string/app_name">
         </activity>
+
+        <activity android:name=".tetris.Tetris2Activity" android:label="@string/app_name">
+        </activity>
         
         <service android:name=".tetris.TetrisService" android:process=":remote">
             <intent-filter>
