* adding UI using SurfaceView. * implemeting menu button functionality.

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
 
         <activity android:name=".tetris.Tetris2Activity" android:label="@string/app_name">
         </activity>
+        <activity android:name=".tetris.Tetris3Activity" android:label="@string/app_name">
+        </activity>
         
         <service android:name=".tetris.TetrisService" android:process=":remote">
             <intent-filter>
